--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
-                    <h2 class="section-heading text-uppercase">About</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
+                    <h2 class="section-heading text-uppercase">Timeline</h2>
+                    <h3 class="section-subheading text-muted">Mira las películas en orden cronológico:</h3>
                 </div>
                 <ul class="timeline">
                     <li>
