--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/1.jpg" alt="Película de la monja" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Septiembre, 2018</h4>
-                                <h4 class="subheading">La Monja</h4>
+                                <>Septiembre, 2018</p>
+                                <p class="subheading">La Monja</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">En 1952, en el monasterio de Cârţa, en Rumanía, las dos monjas que viven allí son atacadas por una presencia demoníaca invisible cuando entran en un túnel para recuperar una antigua reliquia cristiana. La monja de mayor edad, la hermana Jessica (Ani Sava) fallece, y la superviviente, la hermana Victoria (Charlotte Hope), huye del atacante, un demonio que aparece como una monja, y muere ahorcada al saltar por una ventana. Durante el día, su cuerpo es descubierto poco después por Frenchie (Jonas Bloquet), un hombre encargado de transportar provisiones a las monjas.</p></div>
                         </div>
@@ -187,8 +187,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/2.jpg" alt=".Película de Anabelle: Creación" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Agosto, 2017</h4>
-                                <h4 class="subheading">Annabelle: Creation</h4>
+                                <p>Agosto, 2017</p>
+                                <p class="subheading">Annabelle: Creation</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">Varios años después del trágico fallecimiento de su hija, un juguetero que crea muñecas y su mujer, acogen en su casa a una monja enfermera y a un grupo de niñas, tratando de convertir su casa en un acogedor orfanato. Sin embargo, las nuevos inquilinos se convertirán en el objetivo de Annabelle, una muñeca poseída por un ser demoníaco. Secuela de "Annabelle" (2014).</p></div>
                         </div>
@@ -197,8 +197,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/3.jpg" alt="Película de Anabelle" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Octubre, 2014</h4>
-                                <h4 class="subheading">Annabelle</h4>
+                                <p>Octubre, 2014</p>
+                                <p class="subheading">Annabelle</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">La cinta empieza con la misma secuencia vista en The Conjuring en la cual tres jóvenes son entrevistados por Ed y Lorraine Warren (Patrick Wilson y Vera Farmiga) sobre sus experiencias con una muñeca a la que habían llamado Annabelle y que supuestamente estaba poseída.
 
@@ -209,8 +209,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/4.jpg" alt="Película de The Conjuring" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Julio, 2013</h4>
-                                <h4 class="subheading">The Conjuring</h4>
+                                <p>Julio, 2013</p>
+                                <p class="subheading">The Conjuring</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">En 1971, Roger y Carolyn Perron (Ron Livingston y Lili Taylor) son un matrimonio que se traslada con sus cinco hijas a una granja en Harrisville. El primer día como propietarios resulta ser idílico a excepción del extraño comportamiento de su perra Sadie, la cual se niega a entrar y empieza a ladrar; por otro lado, una de las hijas rompe sin querer un tablón de la pared y descubren un sótano y una de las hijas (la menor) encuentra una caja musical extraña.</p></div>
                         </div>
@@ -219,8 +219,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/5.jpg" alt="Película de Anabelle comes home" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Junio, 2019</h4>
-                                <h4 class="subheading">Annabelle Comes Home</h4>
+                                <p>Junio, 2019</p>
+                                <p class="subheading">Annabelle Comes Home</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">En 1968, los demonólogos Ed y Lorraine Warren se llevan a su casa a la muñeca poseída Annabelle, después de que dos enfermeras (Debbie y Camilla) aseguraran que la muñeca a menudo realizaba actividades violentas en su apartamento. Durante el trayecto, la muñeca convoca a los espíritus de un cementerio situado junto a la carretera para que ataquen a Ed, pero este consigue sobrevivir. Una vez en la casa, Annabelle es colocada en una vitrina en la sala de artefactos de la pareja y bendecida por el padre Gordon para asegurarse de que su mal está contenido.
                             </p></div>
@@ -230,8 +230,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/6.jpg" alt="Película de la maldición de la llorona" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Abril, 2019</h4>
-                                <h4 class="subheading">The Curse of La Llorona</h4>
+                                <p>Abril, 2019</p>
+                                <p class="subheading">The Curse of La Llorona</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">En 1673, México, una pareja está jugando con sus hijos en un campo, y el más pequeño de ellos le da a su madre un collar, que ella acepta agradecida. El niño cierra los ojos brevemente, y cuando los abre, su familia está desaparecida. Mientras busca a sus padres, el niño ve a su madre ahogando a su hermano en un arroyo. El niño corre horrorizado, pero su madre lo atrapa y parece ahogarlo también.
                             </p></div>
@@ -241,8 +241,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/7.jpg" alt="Película de The Conjuring 2" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Junio, 2016</h4>
-                                <h4 class="subheading">The Conjuring 2</h4>
+                                <p>Junio, 2016</p>
+                                <p class="subheading">The Conjuring 2</p>
                             </div>
                             <div class="timeline-body"><p class="text-muted">6 años después de los terroríficos eventos de The Conjuring La película comienza en Amityville, Nueva York, donde Ed y Lorraine Warren trabajan intentando solucionar un caso. Lorraine se transporta a un plano astral en donde intenta encontrar el motivo de por qué hubo tantos asesinatos en esa morada, pero al seguir a un niño, se encuentra con una extraña entidad en forma de monja dentro de un espejo que anuncia la muerte de Ed. Tras estos incidentes, Lorraine le dice a Ed que no es capaz de seguir llevando adelante más casos.
                             </p></div>
@@ -252,8 +252,8 @@
                         <div class="timeline-image"><img class="rounded-circle img-fluid" style="width: 100%; height: 100%;" src="assets/img/about/8.jpg" alt="Película de The Conjuring : The devil made me do it" /></div>
                         <div class="timeline-panel">
                             <div class="timeline-heading">
-                                <h4>Junio, 2021</h4>
-                                <h4 class="subheading">The Conjuring : The Devil Made Me Do It</h4>
+                                <p>Junio, 2021</p>
+                                <p class="subheading">The Conjuring : The Devil Made Me Do It</p>
                             </div>
                         </div>
                     </li>
@@ -271,7 +271,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Patrick.jpg" alt="..." />
-                            <h4>Patrick Wilson</h4>
+                            <p>Patrick Wilson</p>
                             <p class="text-muted">Ed Warren</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><i class="fab fa-facebook-f"></i></a>
@@ -281,7 +281,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/Vera.jpg" alt="..." />
-                            <h4>Vera Farmiga</h4>
+                            <p>Vera Farmiga</p>
                             <p class="text-muted">Lorraine Warren</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/VeraFarmiga/"><i class="fab fa-facebook-f"></i></a>
@@ -291,7 +291,7 @@
                     <div class="col-lg-4">
                         <div class="team-member">
                             <img class="mx-auto rounded-circle" src="assets/img/team/noloconocenisumadre.jpg" alt="..." />
-                            <h4>Ruairi O'Connor</h4>
+                            <p>Ruairi O'Connor</p>
                             <p class="text-muted"> Arne Cheyenne Johnson</p>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es"><i class="fab fa-instagram"></i></a>
                         </div>
