--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <a class="navbar-brand" href="#page-top"><img src="assets/img/navbar-logo.png" alt="Logo de The Conjuring"/></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
-                    <i class="fas fa-bars ms-1"></i>
+                    <a class="fas fa-bars ms-1"></a>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav text-uppercase ms-auto py-4 py-lg-0">
