--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Vera.jpg" alt="..." />
                             <p>Vera Farmiga</p>
                             <p class="text-muted">Lorraine Warren</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga"><i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga" title="titulo vera"><i class="fab fa-twitter"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/VeraFarmiga/"><i class="fab fa-facebook-f"></i></a>
                             <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/verafarmiga/"><i class="fab fa-instagram"></i></a>
                         </div>
