--- a/index.html
+++ b/index.html
@@ -273,9 +273,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Patrick.jpg" alt="..." />
                             <p>Patrick Wilson</p>
                             <p class="text-muted">Ed Warren</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es">Twitter<i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Fb<i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">Instagram<i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -283,9 +283,9 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/Vera.jpg" alt="..." />
                             <p>Vera Farmiga</p>
                             <p class="text-muted">Lorraine Warren</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga" title="titulo vera"><i class="fab fa-twitter"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/VeraFarmiga/"><i class="fab fa-facebook-f"></i></a>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/verafarmiga/"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/verafarmiga" title="titulo vera">Twitter<i class="fab fa-twitter"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/VeraFarmiga/">Fb<i class="fab fa-facebook-f"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/verafarmiga/">Instagram<i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                     <div class="col-lg-4">
@@ -293,7 +293,7 @@
                             <img class="mx-auto rounded-circle" src="assets/img/team/noloconocenisumadre.jpg" alt="..." />
                             <p>Ruairi O'Connor</p>
                             <p class="text-muted"> Arne Cheyenne Johnson</p>
-                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es"><i class="fab fa-instagram"></i></a>
+                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es">Instagram<i class="fab fa-instagram"></i></a>
                         </div>
                     </div>
                 </div>
