Cambios para nel hrf
Para que no este vacion un LINK, ya ves tu como va a estar vacio un link

--- a/index.html
+++ b/index.html
@@ -373,9 +373,9 @@
                                             <strong>Nacionalidad:</strong>
                                             Estadounidense
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es">Twitter<i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -408,9 +408,9 @@
                                             Estadounidense
                                         </li>
                                         <p class="text-muted">Ed Warren</p>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182"><i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es">Twitter<i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">Instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -445,7 +445,7 @@
                                             <strong>Nacionalidad:</strong>
                                             Irlandesa
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/ruairijoconnor/?hl=es">Instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -479,8 +479,8 @@
                                             <strong>Nacionalidad:</strong>
                                             Estadounidense
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sjerins?lang=en"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sterlingj123/"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/sjerins?lang=en">Twitter <i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/sterlingj123/">Instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -512,8 +512,8 @@
                                             <strong>Nacionalidad:</strong>
                                             Americana
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/_julianhilliard?lang=en"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjulianhilliard/?hl=en"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/_julianhilliard?lang=en">Twitter<i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/iamjulianhilliard/?hl=en">Instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
@@ -551,8 +551,8 @@
                                             <strong>Nationality:</strong>
                                             Sudafricano
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/SHANNONKOOK?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor"><i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/shannonkook/?hl=en"><i class="fab fa-instagram"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/SHANNONKOOK?ref_src=twsrc%5Egoogle%7Ctwcamp%5Eserp%7Ctwgr%5Eauthor">Twitter<i class="fab fa-twitter"></i></a>
+                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/shannonkook/?hl=en">Instagram<i class="fab fa-instagram"></i></a>
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
