--- a/index.html
+++ b/index.html
@@ -49,12 +49,12 @@
             <div class="container">
                 <div class="text-center">
                     <h2 class="section-heading text-uppercase">Sinopsis</h2>
-                    <h3 class="section-subheading text-muted">Una escalofriante historia de terror, asesinato y un mal desconocido consigue impactar incluso a los 
+                    <p class="section-subheading text-muted">Una escalofriante historia de terror, asesinato y un mal desconocido consigue impactar incluso a los 
                         experimentados investigadores de casos paranormales, Ed y Lorraine Warren. Uno de los casos más sensacionales de sus archivos comienza con la 
                         batalla por el alma de un joven y les lleva más allá de cualquier cosa que hayan visto antes, implicándoles en el primer juicio de los Estados Unidos 
                         donde Arne Cheyne Johnson, es acusado de asesinato tras haber sido poseído por un demonio.​
                         Todo esto ocurre en el 1981.
-                    </h3>
+                    </p>
                 </div>
                 <div class="row text-center">
                         <h1 class="my-3">Mira el trailer aquí: </h1>
