--- a/index.html
+++ b/index.html
@@ -373,9 +373,11 @@
                                             <strong>Nacionalidad:</strong>
                                             Estadounidense
                                         </li>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es">Twitter<i class="fab fa-twitter"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
-                                        <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">instagram<i class="fab fa-instagram"></i></a>
+                                        <li>
+                                            <a class="btn btn-dark btn-social mx-2" href="https://twitter.com/patrickwilson73?lang=es"><span class="sr-only">Twitter</span><i class="fab fa-twitter"></i></a>
+                                            <a class="btn btn-dark btn-social mx-2" href="https://www.facebook.com/profile.php?id=100044514966182">Facebook<i class="fab fa-facebook-f"></i></a>
+                                            <a class="btn btn-dark btn-social mx-2" href="https://www.instagram.com/thereelpatrickwilson/?hl=es">instagram<i class="fab fa-instagram"></i></a>
+                                        </li>    
                                     </ul>
                                     <button class="btn btn-primary btn-xl text-uppercase" data-bs-dismiss="modal" type="button">
                                         <i class="fas fa-times me-1"></i>
