--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <link href="https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700" rel="stylesheet" type="text/css" />
         <!-- Core theme CSS (includes Bootstrap)-->
         <link href="css/styles.css" rel="stylesheet" />
+        <link href="css/styles.css" rel="stylesheet" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
@@ -30,8 +31,7 @@
                         <li class="nav-item"><a class="nav-link" href="#sinopsis">Sinopsis</a></li>
                         <li class="nav-item"><a class="nav-link" href="#portfolio">Actores</a></li>
                         <li class="nav-item"><a class="nav-link" href="#about">Timeline</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#team">Team</a></li>
-                        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
+                        <li class="nav-item"><a class="nav-link" href="#team">Reseñas</a></li>
                     </ul>
                 </div>
             </div>
@@ -64,7 +64,7 @@
                 </div>
             </div>
         </section>
-        <!-- Portfolio Grid-->
+        <!-- Actores-->
         <section class="page-section bg-light" id="portfolio">
             <div class="container">
                 <div class="text-center">
@@ -165,7 +165,7 @@
                 </div>
             </div>
         </section>
-        <!-- About-->
+        <!-- Timeline movies-->
         <section class="page-section" id="about">
             <div class="container">
                 <div class="text-center">
@@ -260,7 +260,7 @@
                 </ul>
             </div>
         </section>
-        <!-- Team-->
+        <!-- Reseñas-->
         <section class="page-section bg-light" id="team">
             <div class="container">
                 <div class="text-center">
@@ -297,29 +297,7 @@
                 </div>
             </div>
         </section>
-        <!-- Contact-->
-        <section class="page-section" id="contact">
-            <div class="container">
-                <div class="text-center">
-                    <h2 class="section-heading text-uppercase">Contact Us</h2>
-                    <h3 class="section-subheading text-muted">Lorem ipsum dolor sit amet consectetur.</h3>
-                </div>
-                <form id="contactForm">
-                    <div class="row align-items-stretch mb-5">
-                        <div class="col-md-6">
-
-                        </div>
-                        <div class="col-md-6">
-
-                        </div>
-                    </div>
-                    <div class="text-center">
-                        <div id="success"></div>
-                        <button class="btn btn-primary btn-xl text-uppercase" id="sendMessageButton" type="submit">Send Message</button>
-                    </div>
-                </form>
-            </div>
-        </section>
+        <!-- Gallery-->
         <!-- Footer-->
         <footer class="footer py-4">
             <div class="container">
